crates/tui/tests/snapshots/contexts__add_form_filled.snap
---
source: crates/tui/tests/contexts.rs
expression: "app.snapshot(100, 23).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────╮
│Context:    no session                                                  │       clusters -  hosts -
│Config:     -                                                           │         vms -  on/off -/-
│Cluster:    -                                                           │           alerts ⚠ -  ✖ -
│Kind:       Contexts                                                    │         tasks ▶ - running
│Count:      1 context                                                   │
╰────────────────────────────────────────────────────────────────────────╯          v0.0.2-beta3 · -
   NAME           HOST                     USER       CLUSTER        FLAGS              PASSWORD
>* lab            pc.lab.example           admin      -              insecure           stored
                    ╭ add context ─────────────────────────────────────────────╮
                    │  name       new                                          │
                    │  host       pc.new.example                               │
                    │  port       9440                                         │
                    │  username   admin                                        │
                    │  password   ******                                       │
                    │  cluster                                                 │
                    │  insecure   [x]                                          │
                    │▸ read-only  [ ]                                          │
                    ╰──────────────────────────────────────────────────────────╯


 tab next  shift-tab previous  space toggle  enter submit  esc cancel
