crates/tui/tests/snapshots/contexts__contexts_empty.snap
---
source: crates/tui/tests/contexts.rs
expression: "app.snapshot(100, 17).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────╮
│Context:    no session                                                  │       clusters -  hosts -
│Config:     -                                                           │         vms -  on/off -/-
│Cluster:    -                                                           │           alerts ⚠ -  ✖ -
│Kind:       Contexts                                                    │         tasks ▶ - running
│Count:      0 contexts                                                  │
╰────────────────────────────────────────────────────────────────────────╯                v0.1.0 · -
No contexts. Press a to add one, or run nutsh ctx add.







 enter connect  a add  l login  d remove  ^r reload  q quit
