crates/tui/tests/snapshots/contexts__contexts_rows.snap
---
source: crates/tui/tests/contexts.rs
expression: "app.snapshot(100, 17).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────╮
│Context:    no session                                                  │       clusters -  hosts -
│Config:     -                                                           │         vms -  on/off -/-
│Cluster:    -                                                           │           alerts ⚠ -  ✖ -
│Kind:       Contexts                                                    │         tasks ▶ - running
│Count:      2 contexts                                                  │
╰────────────────────────────────────────────────────────────────────────╯                v0.2.0 · -
   NAME           JOINED  HOST             USER       CLUSTER        FLAGS              PASSWORD
>* lab            session pc.lab.example   admin      -              insecure           stored
   prod           [ ]     pc.lab.example   admin      -              insecure           -





 enter connect  a add  l login  d remove  ^r reload  q quit
